src/test/deca/context/valid/without_class/variable_name_with_protected_word.deca
// Description:
//    Variable name is a protected word
//
// Result:
//    Syntax Error
//    line 10


{
    int float = 2;
}