src/test/deca/context/invalid/without_class/incompatible_type_lt_float_bool.deca
// Description:
//    Error : operator equals not defined with type boolean
//
// Result:
//    INCOMPATIBLE_TYPE_OPERATOR: Type \(.\)\+ is incompatible with type \(.\)\+ for the operator \(.\)\+
//    line 10
{
    float a = 1.0;
    boolean c = true;
    boolean result = a < c; 
}